--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
   functions = "functions"
+  publish = "public"
 
-[functions]
-  node_bundler = "esbuild"
+[dev]
+  functions = "functions"
